Fixed invisible form input

--- a/src/components/MailChimpForm/styles.scss
+++ b/src/components/MailChimpForm/styles.scss
@@ -18,6 +18,11 @@
 
     input {
         margin-top: 2vh;
+        color: $darkGrey;
+
+        &[type=submit] {
+            color: #fff;
+        }
     }
 
     .button-primary {
@@ -28,7 +33,6 @@
 
     form {
         color: $darkGrey;
-
     }
 }
 
